--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<title>Multiplayer snake</title>
+		<link rel="stylesheet" type="text/css" href="/client/css/game.css">
 		<script src="/client/js/jquery-3.3.1.min.js"></script>
 		<script src="/client/js/socket.io.js"></script>
 		<script src="/client/js/cookies.js"></script>
 		<script src="/client/js/phaser.min.js"></script>
 	</head>
 	<body style="background-color: #555555">
+		<div id="snake-game"></div>
 		<script src="/client/js/game.js"></script>
 	</body>
 </html>
