--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,26 @@
 <html>
 	<head>
 		<title>Multiplayer snake</title>
+		<link rel="stylesheet" type="text/css" href="/client/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/client/css/game.css">
 		<script src="/client/js/jquery-3.3.1.min.js"></script>
+		<script src="/client/js/bootstrap.min.js"></script>
 		<script src="/client/js/socket.io.js"></script>
 		<script src="/client/js/cookies.js"></script>
 		<script src="/client/js/phaser.min.js"></script>
 	</head>
-	<body style="background-color: #555555">
+	<body style="background-color: "#555555">
 		<div id="snake-game"></div>
 		<script src="/client/js/game.js"></script>
+		<div id="menu" class="border border-dark rounded">
+			<form class="mx-2 my-2">
+				<div class="form-group">
+					<input class="form-control" type="text" id="name" maxlength="16" placeholder="Name" value="Unnamed player"/>
+				</div>
+				<div>
+					<input class="form-control btn btn-success" type="button" id="btn_play" value="Play"/>
+				</div>
+			</form>
+		</div>
 	</body>
 </html>
