added class 'active' to button

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 					<input class="form-control" type="text" id="name" maxlength="16" placeholder="Name" value="Unnamed player"/>
 				</div>
 				<div>
-					<input class="form-control btn btn-success" type="button" id="btn_play" value="Play"/>
+					<input class="form-control btn btn-success active" type="button" id="btn_play" value="Play"/>
 				</div>
 			</form>
 		</div>
