--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 
 		<div id="menu" class="border border-dark rounded">
 			<form class="mx-2 my-2">
+				<h1 class="text-center mb-4">Multiplayer Snake</h1>
 				<div class="form-group">
 					<input class="form-control" type="text" id="name" maxlength="16" placeholder="Name" value="Unnamed player"/>
 				</div>
