added player score

--- a/client/index.html
+++ b/client/index.html
@@ -32,10 +32,16 @@
 			</form>
 		</div>
 
-		<div id="server-info">
-			<div id="position" class="mx-1 my-1"></div>
+		<div id="server-info" class="border">
+			<div id="player-info">
+				<div id="score" class="mx-1 my-1">
+					Score: 
+					<span id="player-score">?</span>
+				</div>
+				<div id="position" class="mx-1 my-1"></div>
+			</div>
 			<div id="ping" class="mx-1 my-1">Server ping: 
-				<span id="server-ping">?</span>
+				<span id="server-ping"></span>
 			</div>
 		</div>
 
