--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 		<script src="/client/js/cookies.js"></script>
 		<script src="/client/js/phaser.min.js"></script>
 	</head>
-	<body style="background-color: "#555555">
+	<body style="background-color: #555555">
 		<div id="snake-game"></div>
 		<script src="/client/js/game.js"></script>
 
