--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/client/css/game.css">
 		<script src="/client/js/jquery-3.3.1.min.js"></script>
 		<script src="/client/js/bootstrap.bundle.min.js"></script>
-		<script src="/client/js/socket.io.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="/client/js/cookies.js"></script>
 		<script src="/client/js/phaser.min.js"></script>
 	</head>
